[package]
name = "gate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.0", features = ["rayon"] }
num-complex = "0.4.2"
#ndarray-linalg

[dev-dependencies]
pretty_assertions = "1.0.0"
