[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
indicatif = { version = "0.17.1", optional = true }
#ndarray = { version = "0.15.0", features = ["rayon"] }
#ndarray-linalg
num-complex = "0.4.2"
num_cpus = "1.14.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
