[package]
name = "ui"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
num-complex = "0.4.2"
simulator = { path = "../simulator", features = ["indicatif"] }
